tests/negative/call_undeclared.fc
// test: call-undeclared-func-test
// compile-fail: true
// exit-code: 2

int write(int _);
void exit(int _);

void main(){
    foo(4);
    exit(0);
}